# C-Pico_RFID_RC522

./: CMakeLists.txt  README.md  build.sh
src/: main.c
src/include/rfid_rc522/: rc522.h
src/rfid_rc522/: rc522.c
